java_grammar.output
State 265 conflicts: 12 shift/reduce
State 367 conflicts: 12 shift/reduce
State 452 conflicts: 1 shift/reduce


Grammar

    0 $accept: Goal $end

    1 Goal: CompilationUnit

    2 Name: Identifier DOT Name
    3     | Identifier

    4 Literal: INTEGER
    5        | FLOATING
    6        | CNULL

    7 Type: PrimitiveType
    8     | ReferenceType

    9 PrimitiveType: NumericType
   10              | BOOLEAN

   11 NumericType: IntegralType
   12            | FloatingPointType

   13 IntegralType: CBYTE
   14             | SHORT
   15             | CINT
   16             | LONG
   17             | CHAR
   18             | STRING

   19 FloatingPointType: FLOAT
   20                  | DOUBLE

   21 ReferenceType: ClassOrInterfaceType
   22              | ArrayType

   23 ClassOrInterfaceType: Name

   24 ClassType: ClassOrInterfaceType

   25 InterfaceType: ClassOrInterfaceType

   26 ArrayType: PrimitiveType OBB CBB
   27          | Name OBB CBB
   28          | ArrayType OBB CBB

   29 CompilationUnit: PackageDeclaration ImportDeclarations TypeDeclarations
   30                | ImportDeclarations TypeDeclarations
   31                | PackageDeclaration TypeDeclarations
   32                | TypeDeclarations
   33                | %empty

   34 ImportDeclarations: ImportDeclaration
   35                   | ImportDeclarations ImportDeclaration

   36 TypeDeclarations: TypeDeclaration
   37                 | TypeDeclarations TypeDeclaration

   38 PackageDeclaration: PACKAGE Name SEMICOLON

   39 ImportDeclaration: SingleTypeImportDeclaration
   40                  | TypeImportOnDemandDeclaration

   41 SingleTypeImportDeclaration: IMPORT Name SEMICOLON

   42 TypeImportOnDemandDeclaration: IMPORT Name DOT CMUL SEMICOLON

   43 TypeDeclaration: ClassDeclaration
   44                | InterfaceDeclaration
   45                | SEMICOLON

   46 Modifiers: Modifier
   47          | Modifiers Modifier

   48 Modifier: PUBLIC
   49         | PROTECTED
   50         | PRIVATE
   51         | STATIC
   52         | ABSTRACT
   53         | FINAL
   54         | NATIVE
   55         | SYNCHRONIZED
   56         | TRANSIENT
   57         | VOLATILE

   58 ClassDeclaration: Modifiers CLASS Identifier Super Interfaces ClassBody
   59                 | CLASS Identifier Super Interfaces ClassBody
   60                 | CLASS Identifier Super ClassBody
   61                 | CLASS Identifier Interfaces ClassBody
   62                 | CLASS Identifier ClassBody
   63                 | Modifiers CLASS Identifier Super ClassBody
   64                 | Modifiers CLASS Identifier Interfaces ClassBody
   65                 | Modifiers CLASS Identifier ClassBody

   66 Super: EXTENDS ClassType

   67 Interfaces: IMPLEMENTS InterfaceTypeList

   68 InterfaceTypeList: InterfaceType
   69                  | InterfaceTypeList COMMA InterfaceType

   70 ClassBody: OCB ClassBodyDeclarations CCB
   71          | OCB CCB

   72 ClassBodyDeclarations: ClassBodyDeclaration
   73                      | ClassBodyDeclarations ClassBodyDeclaration

   74 ClassBodyDeclaration: ClassMemberDeclaration
   75                     | StaticInitializer
   76                     | ConstructorDeclaration

   77 ClassMemberDeclaration: FieldDeclaration
   78                       | MethodDeclaration

   79 FieldDeclaration: Modifiers Type VariableDeclarators SEMICOLON
   80                 | Type VariableDeclarators SEMICOLON

   81 VariableDeclarators: VariableDeclarator
   82                    | VariableDeclarators COMMA VariableDeclarator

   83 VariableDeclarator: VariableDeclaratorId
   84                   | VariableDeclaratorId EQUALS VariableInitializer

   85 VariableDeclaratorId: Identifier
   86                     | VariableDeclaratorId OBB CBB

   87 VariableInitializer: Expression
   88                    | ArrayInitializer

   89 MethodDeclaration: MethodHeader MethodBody

   90 MethodHeader: Modifiers Type MethodDeclarator Throws
   91             | Modifiers Type MethodDeclarator
   92             | Type MethodDeclarator Throws
   93             | Type MethodDeclarator
   94             | Modifiers VOID Identifier MethodDeclarator Throws
   95             | Modifiers VOID Identifier MethodDeclarator
   96             | VOID Identifier MethodDeclarator Throws
   97             | VOID Identifier MethodDeclarator

   98 MethodDeclarator: Identifier OB FormalParameterList CB
   99                 | Identifier OB CB
  100                 | MethodDeclarator OBB CBB

  101 FormalParameterList: FormalParameter
  102                    | FormalParameterList COMMA FormalParameter

  103 FormalParameter: Type VariableDeclaratorId

  104 Throws: THROWS ClassTypeList

  105 ClassTypeList: ClassType
  106              | ClassTypeList COMMA ClassType

  107 MethodBody: Block
  108           | SEMICOLON

  109 StaticInitializer: STATIC Block

  110 ConstructorDeclaration: Modifiers ConstructorDeclarator Throws ConstructorBody
  111                       | Modifiers ConstructorDeclarator ConstructorBody
  112                       | ConstructorDeclarator Throws ConstructorBody
  113                       | ConstructorDeclarator ConstructorBody

  114 ConstructorDeclarator: Identifier OB FormalParameterList CB
  115                      | Identifier OB CB

  116 ConstructorBody: OCB ExplicitConstructorInvocation BlockStatements CCB
  117                | OCB BlockStatements CCB
  118                | OCB ExplicitConstructorInvocation CCB
  119                | OCB CCB

  120 ExplicitConstructorInvocation: THIS OB ArgumentList CB SEMICOLON
  121                              | THIS OB CB SEMICOLON
  122                              | SUPER OB ArgumentList CB SEMICOLON
  123                              | SUPER OB CB SEMICOLON

  124 InterfaceDeclaration: Modifiers INTERFACE Identifier ExtendsInterfaces InterfaceBody
  125                     | INTERFACE Identifier ExtendsInterfaces InterfaceBody
  126                     | Modifiers INTERFACE Identifier InterfaceBody
  127                     | INTERFACE Identifier InterfaceBody

  128 ExtendsInterfaces: EXTENDS InterfaceType
  129                  | ExtendsInterfaces COMMA InterfaceType

  130 InterfaceBody: OCB InterfaceMemberDeclarations CCB
  131              | OCB CCB

  132 InterfaceMemberDeclarations: InterfaceMemberDeclaration
  133                            | InterfaceMemberDeclarations InterfaceMemberDeclaration

  134 InterfaceMemberDeclaration: ConstantDeclaration
  135                           | AbstractMethodDeclaration

  136 ConstantDeclaration: FieldDeclaration

  137 AbstractMethodDeclaration: MethodHeader SEMICOLON

  138 ArrayInitializer: OCB VariableInitializers COMMA CCB
  139                 | OCB COMMA CCB
  140                 | OCB VariableInitializers CCB
  141                 | OCB CCB

  142 VariableInitializers: VariableInitializer
  143                     | VariableInitializers COMMA VariableInitializer

  144 Block: OCB BlockStatements CCB
  145      | OCB CCB

  146 BlockStatements: BlockStatement
  147                | BlockStatements BlockStatement

  148 BlockStatement: LocalVariableDeclarationStatement
  149               | Statement

  150 LocalVariableDeclarationStatement: LocalVariableDeclaration SEMICOLON

  151 LocalVariableDeclaration: Type VariableDeclarators

  152 Statement: StatementWithoutTrailingSubstatement
  153          | LabeledStatement
  154          | IfThenStatement
  155          | IfThenElseStatement
  156          | WhileStatement
  157          | ForStatement

  158 StatementNoShortIf: StatementWithoutTrailingSubstatement
  159                   | LabeledStatementNoShortIf
  160                   | IfThenElseStatementNoShortIf
  161                   | WhileStatementNoShortIf
  162                   | ForStatementNoShortIf

  163 StatementWithoutTrailingSubstatement: Block
  164                                     | EmptyStatement
  165                                     | ExpressionStatement
  166                                     | SwitchStatement
  167                                     | DoStatement
  168                                     | BreakStatement
  169                                     | ContinueStatement
  170                                     | ReturnStatement
  171                                     | SynchronizedStatement
  172                                     | ThrowStatement
  173                                     | TryStatement

  174 EmptyStatement: SEMICOLON

  175 LabeledStatement: Identifier COLON Statement

  176 LabeledStatementNoShortIf: Identifier COLON StatementNoShortIf

  177 ExpressionStatement: StatementExpression SEMICOLON

  178 StatementExpression: Assignment
  179                    | PreIncrementExpression
  180                    | PreDecrementExpression
  181                    | PostIncrementExpression
  182                    | PostDecrementExpression
  183                    | MethodInvocation
  184                    | ClassInstanceCreationExpression

  185 IfThenStatement: IF OB Expression CB Statement

  186 IfThenElseStatement: IF OB Expression CB StatementNoShortIf ELSE Statement

  187 IfThenElseStatementNoShortIf: IF OB Expression CB StatementNoShortIf ELSE StatementNoShortIf

  188 SwitchStatement: SWITCH OB Expression CB SwitchBlock

  189 SwitchBlock: OCB SwitchBlockStatementGroups SwitchLabels CCB
  190            | OCB SwitchBlockStatementGroups CCB
  191            | OCB SwitchLabels CCB
  192            | OCB CCB

  193 SwitchBlockStatementGroups: SwitchBlockStatementGroup
  194                           | SwitchBlockStatementGroups SwitchBlockStatementGroup

  195 SwitchBlockStatementGroup: SwitchLabels BlockStatements

  196 SwitchLabels: SwitchLabel
  197             | SwitchLabels SwitchLabel

  198 SwitchLabel: CASE ConstantExpression COLON
  199            | DEFAULT COLON

  200 WhileStatement: WHILE OB Expression CB Statement

  201 WhileStatementNoShortIf: WHILE OB Expression CB StatementNoShortIf

  202 DoStatement: DO Statement WHILE OB Expression CB SEMICOLON

  203 ForStatement: FOR OB ForInit SEMICOLON Expression SEMICOLON ForUpdate CB Statement
  204             | FOR OB SEMICOLON Expression SEMICOLON ForUpdate CB Statement
  205             | FOR OB ForInit SEMICOLON Expression SEMICOLON CB Statement
  206             | FOR OB ForInit SEMICOLON SEMICOLON ForUpdate CB Statement
  207             | FOR OB ForInit SEMICOLON SEMICOLON CB Statement
  208             | FOR OB SEMICOLON SEMICOLON ForUpdate CB Statement
  209             | FOR OB SEMICOLON Expression SEMICOLON CB Statement
  210             | FOR OB SEMICOLON SEMICOLON CB Statement

  211 ForStatementNoShortIf: FOR OB ForInit SEMICOLON Expression SEMICOLON ForUpdate CB StatementNoShortIf
  212                      | FOR OB SEMICOLON Expression SEMICOLON ForUpdate CB StatementNoShortIf
  213                      | FOR OB ForInit SEMICOLON Expression SEMICOLON CB StatementNoShortIf
  214                      | FOR OB ForInit SEMICOLON SEMICOLON ForUpdate CB StatementNoShortIf
  215                      | FOR OB ForInit SEMICOLON SEMICOLON CB StatementNoShortIf
  216                      | FOR OB SEMICOLON SEMICOLON ForUpdate CB StatementNoShortIf
  217                      | FOR OB SEMICOLON Expression SEMICOLON CB StatementNoShortIf
  218                      | FOR OB SEMICOLON SEMICOLON CB StatementNoShortIf

  219 ForInit: StatementExpressionList
  220        | LocalVariableDeclaration

  221 ForUpdate: StatementExpressionList

  222 StatementExpressionList: StatementExpression
  223                        | StatementExpressionList COMMA StatementExpression

  224 BreakStatement: BREAK Identifier SEMICOLON
  225               | BREAK SEMICOLON

  226 ContinueStatement: CONTINUE Identifier SEMICOLON
  227                  | CONTINUE SEMICOLON

  228 ReturnStatement: RETURN Expression SEMICOLON
  229                | RETURN SEMICOLON

  230 ThrowStatement: THROW Expression SEMICOLON

  231 SynchronizedStatement: SYNCHRONIZED OB Expression CB Block

  232 TryStatement: TRY Block Catches
  233             | TRY Block Catches Finally
  234             | TRY Block Finally

  235 Catches: CatchClause
  236        | Catches CatchClause

  237 CatchClause: CATCH OB FormalParameter CB Block

  238 Finally: FINALLY Block

  239 Primary: PrimaryNoNewArray
  240        | ArrayCreationExpression

  241 PrimaryNoNewArray: Literal
  242                  | THIS
  243                  | OB Expression CB
  244                  | ClassInstanceCreationExpression
  245                  | FieldAccess
  246                  | MethodInvocation
  247                  | ArrayAccess

  248 ClassInstanceCreationExpression: NEW ClassType OB ArgumentList CB
  249                                | NEW ClassType OB CB

  250 ArgumentList: Expression
  251             | ArgumentList COMMA Expression

  252 ArrayCreationExpression: NEW PrimitiveType DimExprs Dims
  253                        | NEW PrimitiveType DimExprs
  254                        | NEW ClassOrInterfaceType DimExprs Dims
  255                        | NEW ClassOrInterfaceType DimExprs

  256 DimExprs: DimExpr
  257         | DimExprs DimExpr

  258 DimExpr: OBB Expression CBB

  259 Dims: OBB CBB
  260     | Dims OBB CBB

  261 MethodInvocation: Name OB ArgumentList CB
  262                 | Name OB CB
  263                 | Primary DOT Identifier OB ArgumentList CB
  264                 | Primary DOT Identifier OB CB
  265                 | SUPER DOT Identifier OB ArgumentList CB
  266                 | SUPER DOT Identifier OB CB

  267 ArrayAccess: Name OBB Expression CBB
  268            | PrimaryNoNewArray OBB Expression CBB

  269 PostfixExpression: Primary
  270                  | Name
  271                  | PostIncrementExpression
  272                  | PostDecrementExpression

  273 PostIncrementExpression: PostfixExpression INCREMENT

  274 PostDecrementExpression: PostfixExpression DECREMENT

  275 UnaryExpression: PreIncrementExpression
  276                | PreDecrementExpression
  277                | PLUS UnaryExpression
  278                | MINUS UnaryExpression
  279                | UnaryExpressionNotPlusMinus

  280 PreIncrementExpression: INCREMENT UnaryExpression

  281 PreDecrementExpression: DECREMENT UnaryExpression

  282 UnaryExpressionNotPlusMinus: PostfixExpression
  283                            | TILDE UnaryExpression
  284                            | NOT UnaryExpression
  285                            | CastExpression

  286 CastExpression: OB PrimitiveType Dims CB UnaryExpression
  287               | OB PrimitiveType CB UnaryExpression
  288               | OB Expression CB UnaryExpressionNotPlusMinus
  289               | OB Name Dims CB UnaryExpressionNotPlusMinus

  290 MultiplicativeExpression: UnaryExpression
  291                         | MultiplicativeExpression CMUL UnaryExpression
  292                         | MultiplicativeExpression CDIV UnaryExpression
  293                         | MultiplicativeExpression MOD UnaryExpression

  294 AdditiveExpression: MultiplicativeExpression
  295                   | AdditiveExpression PLUS MultiplicativeExpression
  296                   | AdditiveExpression MINUS MultiplicativeExpression

  297 ShiftExpression: AdditiveExpression
  298                | ShiftExpression SHIFTLEFT AdditiveExpression
  299                | ShiftExpression SHIFTRIGHT AdditiveExpression
  300                | ShiftExpression USHIFTRIGHT AdditiveExpression

  301 RelationalExpression: ShiftExpression
  302                     | RelationalExpression LT ShiftExpression
  303                     | RelationalExpression GT ShiftExpression
  304                     | RelationalExpression LT EQUALS ShiftExpression
  305                     | RelationalExpression GT EQUALS ShiftExpression
  306                     | RelationalExpression INSTANCEOF ReferenceType

  307 EqualityExpression: RelationalExpression
  308                   | EqualityExpression EQUALS EQUALS RelationalExpression
  309                   | EqualityExpression NOT EQUALS RelationalExpression

  310 AndExpression: EqualityExpression
  311              | AndExpression AND EqualityExpression

  312 ExclusiveOrExpression: AndExpression
  313                      | ExclusiveOrExpression EXP AndExpression

  314 InclusiveOrExpression: ExclusiveOrExpression
  315                      | InclusiveOrExpression OR ExclusiveOrExpression

  316 ConditionalAndExpression: InclusiveOrExpression
  317                         | ConditionalAndExpression DAND InclusiveOrExpression

  318 ConditionalOrExpression: ConditionalAndExpression
  319                        | ConditionalOrExpression DOR ConditionalAndExpression

  320 ConditionalExpression: ConditionalOrExpression
  321                      | ConditionalOrExpression QUESTION Expression COLON ConditionalExpression

  322 AssignmentExpression: ConditionalExpression
  323                     | Assignment

  324 Assignment: Name AssignmentOperator AssignmentExpression

  325 FieldAccess: Primary DOT Identifier
  326            | SUPER DOT Identifier

  327 AssignmentOperator: EQUALS
  328                   | CMUL EQUALS
  329                   | CDIV EQUALS
  330                   | MOD EQUALS
  331                   | PLUS EQUALS
  332                   | MINUS EQUALS
  333                   | SHIFTLEFT EQUALS
  334                   | SHIFTRIGHT EQUALS
  335                   | USHIFTRIGHT EQUALS
  336                   | AND EQUALS
  337                   | EXP EQUALS
  338                   | OR EQUALS

  339 Expression: AssignmentExpression

  340 ConstantExpression: Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMA (258) 69 82 102 106 129 138 139 143 223 251
SEMICOLON (259) 38 41 42 45 79 80 108 120 121 122 123 137 150 174 177
    202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217
    218 224 225 226 227 228 229 230
CBYTE (260) 13
CINT (261) 15
SHORT (262) 14
LONG (263) 16
CHAR (264) 17
FLOAT (265) 19
DOUBLE (266) 20
EXTENDS (267) 66 128
SUPER (268) 122 123 265 266 326
CLASS (269) 58 59 60 61 62 63 64 65
PUBLIC (270) 48
PROTECTED (271) 49
PRIVATE (272) 50
ABSTRACT (273) 52
IMPORT (274) 41 42
STATIC (275) 51 109
FINAL (276) 53
FINALLY (277) 238
VOLATILE (278) 57
TRANSIENT (279) 56
BOOLEAN (280) 10
IMPLEMENTS (281) 67
VOID (282) 94 95 96 97
THIS (283) 120 121 242
THROWS (284) 104
INTERFACE (285) 124 125 126 127
DEFAULT (286) 199
INSTANCEOF (287) 306
QUESTION (288) 321
IF (289) 185 186 187
ELSE (290) 186 187
NEW (291) 248 249 252 253 254 255
CASE (292) 198
SWITCH (293) 188
INTEGER (294) 4
FLOATING (295) 5
CNULL (296) 6
FOR (297) 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217
    218
WHILE (298) 200 201 202
CCB (299) 70 71 116 117 118 119 130 131 138 139 140 141 144 145 189
    190 191 192
CBB (300) 26 27 28 86 100 258 259 260 267 268
CB (301) 98 99 114 115 120 121 122 123 185 186 187 188 200 201 202
    203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218
    231 237 243 248 249 261 262 263 264 265 266 286 287 288 289
CONTINUE (302) 226 227
BREAK (303) 224 225
COLON (304) 175 176 198 199 321
RETURN (305) 228 229
CATCH (306) 237
SYNCHRONIZED (307) 55 231
THROW (308) 230
DO (309) 202
TRY (310) 232 233 234
PACKAGE (311) 38
NATIVE (312) 54
STRING (313) 18
LT (314) 302 304
GT (315) 303 305
EQUALS (316) 84 304 305 308 309 327 328 329 330 331 332 333 334 335
    336 337 338
EXP (317) 313 337
MOD (318) 293 330
PLUS (319) 277 295 331
MINUS (320) 278 296 332
NOT (321) 284 309
TILDE (322) 283
AND (323) 311 336
OR (324) 315 338
DAND (325) 317
DOR (326) 319
CMUL (327) 42 291 328
CDIV (328) 292 329
SHIFTLEFT (329) 298 333
SHIFTRIGHT (330) 299 334
USHIFTRIGHT (331) 300 335
INCREMENT (332) 273 280
DECREMENT (333) 274 281
Identifier (334) 2 3 58 59 60 61 62 63 64 65 85 94 95 96 97 98 99 114
    115 124 125 126 127 175 176 224 226 263 264 265 266 325 326
DOT (335) 2 42 263 264 265 266 325 326
OBB (336) 26 27 28 86 100 258 259 260 267 268
OB (337) 98 99 114 115 120 121 122 123 185 186 187 188 200 201 202
    203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218
    231 237 243 248 249 261 262 263 264 265 266 286 287 288 289
OCB (338) 70 71 116 117 118 119 130 131 138 139 140 141 144 145 189
    190 191 192


Nonterminals, with rules where they appear

$accept (84)
    on left: 0
Goal (85)
    on left: 1, on right: 0
Name (86)
    on left: 2 3, on right: 2 23 27 38 41 42 261 262 267 270 289 324
Literal (87)
    on left: 4 5 6, on right: 241
Type (88)
    on left: 7 8, on right: 79 80 90 91 92 93 103 151
PrimitiveType (89)
    on left: 9 10, on right: 7 26 252 253 286 287
NumericType (90)
    on left: 11 12, on right: 9
IntegralType (91)
    on left: 13 14 15 16 17 18, on right: 11
FloatingPointType (92)
    on left: 19 20, on right: 12
ReferenceType (93)
    on left: 21 22, on right: 8 306
ClassOrInterfaceType (94)
    on left: 23, on right: 21 24 25 254 255
ClassType (95)
    on left: 24, on right: 66 105 106 248 249
InterfaceType (96)
    on left: 25, on right: 68 69 128 129
ArrayType (97)
    on left: 26 27 28, on right: 22 28
CompilationUnit (98)
    on left: 29 30 31 32 33, on right: 1
ImportDeclarations (99)
    on left: 34 35, on right: 29 30 35
TypeDeclarations (100)
    on left: 36 37, on right: 29 30 31 32 37
PackageDeclaration (101)
    on left: 38, on right: 29 31
ImportDeclaration (102)
    on left: 39 40, on right: 34 35
SingleTypeImportDeclaration (103)
    on left: 41, on right: 39
TypeImportOnDemandDeclaration (104)
    on left: 42, on right: 40
TypeDeclaration (105)
    on left: 43 44 45, on right: 36 37
Modifiers (106)
    on left: 46 47, on right: 47 58 63 64 65 79 90 91 94 95 110 111
    124 126
Modifier (107)
    on left: 48 49 50 51 52 53 54 55 56 57, on right: 46 47
ClassDeclaration (108)
    on left: 58 59 60 61 62 63 64 65, on right: 43
Super (109)
    on left: 66, on right: 58 59 60 63
Interfaces (110)
    on left: 67, on right: 58 59 61 64
InterfaceTypeList (111)
    on left: 68 69, on right: 67 69
ClassBody (112)
    on left: 70 71, on right: 58 59 60 61 62 63 64 65
ClassBodyDeclarations (113)
    on left: 72 73, on right: 70 73
ClassBodyDeclaration (114)
    on left: 74 75 76, on right: 72 73
ClassMemberDeclaration (115)
    on left: 77 78, on right: 74
FieldDeclaration (116)
    on left: 79 80, on right: 77 136
VariableDeclarators (117)
    on left: 81 82, on right: 79 80 82 151
VariableDeclarator (118)
    on left: 83 84, on right: 81 82
VariableDeclaratorId (119)
    on left: 85 86, on right: 83 84 86 103
VariableInitializer (120)
    on left: 87 88, on right: 84 142 143
MethodDeclaration (121)
    on left: 89, on right: 78
MethodHeader (122)
    on left: 90 91 92 93 94 95 96 97, on right: 89 137
MethodDeclarator (123)
    on left: 98 99 100, on right: 90 91 92 93 94 95 96 97 100
FormalParameterList (124)
    on left: 101 102, on right: 98 102 114
FormalParameter (125)
    on left: 103, on right: 101 102 237
Throws (126)
    on left: 104, on right: 90 92 94 96 110 112
ClassTypeList (127)
    on left: 105 106, on right: 104 106
MethodBody (128)
    on left: 107 108, on right: 89
StaticInitializer (129)
    on left: 109, on right: 75
ConstructorDeclaration (130)
    on left: 110 111 112 113, on right: 76
ConstructorDeclarator (131)
    on left: 114 115, on right: 110 111 112 113
ConstructorBody (132)
    on left: 116 117 118 119, on right: 110 111 112 113
ExplicitConstructorInvocation (133)
    on left: 120 121 122 123, on right: 116 118
InterfaceDeclaration (134)
    on left: 124 125 126 127, on right: 44
ExtendsInterfaces (135)
    on left: 128 129, on right: 124 125 129
InterfaceBody (136)
    on left: 130 131, on right: 124 125 126 127
InterfaceMemberDeclarations (137)
    on left: 132 133, on right: 130 133
InterfaceMemberDeclaration (138)
    on left: 134 135, on right: 132 133
ConstantDeclaration (139)
    on left: 136, on right: 134
AbstractMethodDeclaration (140)
    on left: 137, on right: 135
ArrayInitializer (141)
    on left: 138 139 140 141, on right: 88
VariableInitializers (142)
    on left: 142 143, on right: 138 140 143
Block (143)
    on left: 144 145, on right: 107 109 163 231 232 233 234 237 238
BlockStatements (144)
    on left: 146 147, on right: 116 117 144 147 195
BlockStatement (145)
    on left: 148 149, on right: 146 147
LocalVariableDeclarationStatement (146)
    on left: 150, on right: 148
LocalVariableDeclaration (147)
    on left: 151, on right: 150 220
Statement (148)
    on left: 152 153 154 155 156 157, on right: 149 175 185 186 200
    202 203 204 205 206 207 208 209 210
StatementNoShortIf (149)
    on left: 158 159 160 161 162, on right: 176 186 187 201 211 212
    213 214 215 216 217 218
StatementWithoutTrailingSubstatement (150)
    on left: 163 164 165 166 167 168 169 170 171 172 173, on right:
    152 158
EmptyStatement (151)
    on left: 174, on right: 164
LabeledStatement (152)
    on left: 175, on right: 153
LabeledStatementNoShortIf (153)
    on left: 176, on right: 159
ExpressionStatement (154)
    on left: 177, on right: 165
StatementExpression (155)
    on left: 178 179 180 181 182 183 184, on right: 177 222 223
IfThenStatement (156)
    on left: 185, on right: 154
IfThenElseStatement (157)
    on left: 186, on right: 155
IfThenElseStatementNoShortIf (158)
    on left: 187, on right: 160
SwitchStatement (159)
    on left: 188, on right: 166
SwitchBlock (160)
    on left: 189 190 191 192, on right: 188
SwitchBlockStatementGroups (161)
    on left: 193 194, on right: 189 190 194
SwitchBlockStatementGroup (162)
    on left: 195, on right: 193 194
SwitchLabels (163)
    on left: 196 197, on right: 189 191 195 197
SwitchLabel (164)
    on left: 198 199, on right: 196 197
WhileStatement (165)
    on left: 200, on right: 156
WhileStatementNoShortIf (166)
    on left: 201, on right: 161
DoStatement (167)
    on left: 202, on right: 167
ForStatement (168)
    on left: 203 204 205 206 207 208 209 210, on right: 157
ForStatementNoShortIf (169)
    on left: 211 212 213 214 215 216 217 218, on right: 162
ForInit (170)
    on left: 219 220, on right: 203 205 206 207 211 213 214 215
ForUpdate (171)
    on left: 221, on right: 203 204 206 208 211 212 214 216
StatementExpressionList (172)
    on left: 222 223, on right: 219 221 223
BreakStatement (173)
    on left: 224 225, on right: 168
ContinueStatement (174)
    on left: 226 227, on right: 169
ReturnStatement (175)
    on left: 228 229, on right: 170
ThrowStatement (176)
    on left: 230, on right: 172
SynchronizedStatement (177)
    on left: 231, on right: 171
TryStatement (178)
    on left: 232 233 234, on right: 173
Catches (179)
    on left: 235 236, on right: 232 233 236
CatchClause (180)
    on left: 237, on right: 235 236
Finally (181)
    on left: 238, on right: 233 234
Primary (182)
    on left: 239 240, on right: 263 264 269 325
PrimaryNoNewArray (183)
    on left: 241 242 243 244 245 246 247, on right: 239 268
ClassInstanceCreationExpression (184)
    on left: 248 249, on right: 184 244
ArgumentList (185)
    on left: 250 251, on right: 120 122 248 251 261 263 265
ArrayCreationExpression (186)
    on left: 252 253 254 255, on right: 240
DimExprs (187)
    on left: 256 257, on right: 252 253 254 255 257
DimExpr (188)
    on left: 258, on right: 256 257
Dims (189)
    on left: 259 260, on right: 252 254 260 286 289
MethodInvocation (190)
    on left: 261 262 263 264 265 266, on right: 183 246
ArrayAccess (191)
    on left: 267 268, on right: 247
PostfixExpression (192)
    on left: 269 270 271 272, on right: 273 274 282
PostIncrementExpression (193)
    on left: 273, on right: 181 271
PostDecrementExpression (194)
    on left: 274, on right: 182 272
UnaryExpression (195)
    on left: 275 276 277 278 279, on right: 277 278 280 281 283 284
    286 287 290 291 292 293
PreIncrementExpression (196)
    on left: 280, on right: 179 275
PreDecrementExpression (197)
    on left: 281, on right: 180 276
UnaryExpressionNotPlusMinus (198)
    on left: 282 283 284 285, on right: 279 288 289
CastExpression (199)
    on left: 286 287 288 289, on right: 285
MultiplicativeExpression (200)
    on left: 290 291 292 293, on right: 291 292 293 294 295 296
AdditiveExpression (201)
    on left: 294 295 296, on right: 295 296 297 298 299 300
ShiftExpression (202)
    on left: 297 298 299 300, on right: 298 299 300 301 302 303 304
    305
RelationalExpression (203)
    on left: 301 302 303 304 305 306, on right: 302 303 304 305 306
    307 308 309
EqualityExpression (204)
    on left: 307 308 309, on right: 308 309 310 311
AndExpression (205)
    on left: 310 311, on right: 311 312 313
ExclusiveOrExpression (206)
    on left: 312 313, on right: 313 314 315
InclusiveOrExpression (207)
    on left: 314 315, on right: 315 316 317
ConditionalAndExpression (208)
    on left: 316 317, on right: 317 318 319
ConditionalOrExpression (209)
    on left: 318 319, on right: 319 320 321
ConditionalExpression (210)
    on left: 320 321, on right: 321 322
AssignmentExpression (211)
    on left: 322 323, on right: 324 339
Assignment (212)
    on left: 324, on right: 178 323
FieldAccess (213)
    on left: 325 326, on right: 245
AssignmentOperator (214)
    on left: 327 328 329 330 331 332 333 334 335 336 337 338, on right:
    324
Expression (215)
    on left: 339, on right: 87 185 186 187 188 200 201 202 203 204
    205 209 211 212 213 217 228 230 231 243 250 251 258 267 268 288
    321 340
ConstantExpression (216)
    on left: 340, on right: 198


State 0

    0 $accept: . Goal $end

    SEMICOLON     shift, and go to state 1
    CLASS         shift, and go to state 2
    PUBLIC        shift, and go to state 3
    PROTECTED     shift, and go to state 4
    PRIVATE       shift, and go to state 5
    ABSTRACT      shift, and go to state 6
    IMPORT        shift, and go to state 7
    STATIC        shift, and go to state 8
    FINAL         shift, and go to state 9
    VOLATILE      shift, and go to state 10
    TRANSIENT     shift, and go to state 11
    INTERFACE     shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    PACKAGE       shift, and go to state 14
    NATIVE        shift, and go to state 15

    $default  reduce using rule 33 (CompilationUnit)

    Goal                           go to state 16
    CompilationUnit                go to state 17
    ImportDeclarations             go to state 18
    TypeDeclarations               go to state 19
    PackageDeclaration             go to state 20
    ImportDeclaration              go to state 21
    SingleTypeImportDeclaration    go to state 22
    TypeImportOnDemandDeclaration  go to state 23
    TypeDeclaration                go to state 24
    Modifiers                      go to state 25
    Modifier                       go to state 26
    ClassDeclaration               go to state 27
    InterfaceDeclaration           go to state 28


State 1

   45 TypeDeclaration: SEMICOLON .

    $default  reduce using rule 45 (TypeDeclaration)


State 2

   59 ClassDeclaration: CLASS . Identifier Super Interfaces ClassBody
   60                 | CLASS . Identifier Super ClassBody
   61                 | CLASS . Identifier Interfaces ClassBody
   62                 | CLASS . Identifier ClassBody

    Identifier  shift, and go to state 29


State 3

   48 Modifier: PUBLIC .

    $default  reduce using rule 48 (Modifier)


State 4

   49 Modifier: PROTECTED .

    $default  reduce using rule 49 (Modifier)


State 5

   50 Modifier: PRIVATE .

    $default  reduce using rule 50 (Modifier)


State 6

   52 Modifier: ABSTRACT .

    $default  reduce using rule 52 (Modifier)


State 7

   41 SingleTypeImportDeclaration: IMPORT . Name SEMICOLON
   42 TypeImportOnDemandDeclaration: IMPORT . Name DOT CMUL SEMICOLON

    Identifier  shift, and go to state 30

    Name  go to state 31


State 8

   51 Modifier: STATIC .

    $default  reduce using rule 51 (Modifier)


State 9

   53 Modifier: FINAL .

    $default  reduce using rule 53 (Modifier)


State 10

   57 Modifier: VOLATILE .

    $default  reduce using rule 57 (Modifier)


State 11

   56 Modifier: TRANSIENT .

    $default  reduce using rule 56 (Modifier)


State 12

  125 InterfaceDeclaration: INTERFACE . Identifier ExtendsInterfaces InterfaceBody
  127                     | INTERFACE . Identifier InterfaceBody

    Identifier  shift, and go to state 32


State 13

   55 Modifier: SYNCHRONIZED .

    $default  reduce using rule 55 (Modifier)


State 14

   38 PackageDeclaration: PACKAGE . Name SEMICOLON

    Identifier  shift, and go to state 30

    Name  go to state 33


State 15

   54 Modifier: NATIVE .

    $default  reduce using rule 54 (Modifier)


State 16

    0 $accept: Goal . $end

    $end  shift, and go to state 34


State 17

    1 Goal: CompilationUnit .

    $default  reduce using rule 1 (Goal)


State 18

   30 CompilationUnit: ImportDeclarations . TypeDeclarations
   35 ImportDeclarations: ImportDeclarations . ImportDeclaration

    SEMICOLON     shift, and go to state 1
    CLASS         shift, and go to state 2
    PUBLIC        shift, and go to state 3
    PROTECTED     shift, and go to state 4
    PRIVATE       shift, and go to state 5
    ABSTRACT      shift, and go to state 6
    IMPORT        shift, and go to state 7
    STATIC        shift, and go to state 8
    FINAL         shift, and go to state 9
    VOLATILE      shift, and go to state 10
    TRANSIENT     shift, and go to state 11
    INTERFACE     shift, and go to state 12
    SYNCHRONIZED  shift, and go to state 13
    NATIVE        shift, and go to state 15
